# StereoReconstrutionRepo

./: .gitignore
stereo-reconstruction/: CMakeLists.txt  README.md
stereo-reconstruction-new/: .gitignore  CMakeLists.txt  ROADMAP.md  analyze_camera_geometry.sh  run_baseline_ablation.sh  run_matching_study.sh  run_sparse_matching_study.sh
stereo-reconstruction-new/include/: DataLoader.h  GaussianBlur.h  ICPOptimizer.h  KeypointDetector.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  Ransac.h  depth.h  dtu_eval.h  evaluation.h  icp.h  matching.h  rectification.h  sparse_matching.h  utils.h
stereo-reconstruction-new/include/mc/: MarchingCubes.h  SimpleMesh.h  Volume.h
stereo-reconstruction-new/results/scene1/study/: README_study.md  ablation_baseline_sgm.md  ablation_window_census.md  study_pair_1_2.md
stereo-reconstruction-new/src/: DataLoader.cpp  GaussianBlur.cpp  KeypointDetector.cpp  Ransac.cpp  depth.cpp  dtu_eval.cpp  evaluation.cpp  icp.cpp  matching.cpp  mesh.cpp  pipeline.cpp  poisson_mesh.cpp  rectification.cpp  sparse_matching.cpp  utils.cpp
stereo-reconstruction/SampleSet/: CVPR2014bib.txt  ReadMe.txt
stereo-reconstruction/include/: Eigen.h  depth.h  evaluation.h  icp.h  matching.h  rectification.h  sparse_matching.h
stereo-reconstruction/src/: depth.cpp  evaluation.cpp  icp.cpp  matching.cpp  mesh.cpp  pipeline.cpp  rectification.cpp  sparse_matching.cpp
